--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,16 @@
         android:label="@string/app_name"
         android:exported="false"
         android:theme="@style/Theme.Quizoku" />
+        <activity
+        android:name=".TrueFalseQuizInstructionsActivity"
+        android:label="@string/app_name"
+        android:exported="false"
+        android:theme="@style/Theme.Quizoku" />
+        <activity
+        android:name=".MultiChoiceQuizInstructionsActivity"
+        android:label="@string/app_name"
+        android:exported="false"
+        android:theme="@style/Theme.Quizoku" />
     <activity
         android:name=".SplashActivity"
         android:label="@string/app_name"
